#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package TimeTool
#------------------------------------------------------------------------

Package author: Matthew J. Weaver

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-03-10
2015-12-16 David Schneider
- Fatally exist if filename in ref_load argument cannot be opened.

Tag: V00-03-09
2015-11-6 Christopher O'Grady
- Fix include AnalyzePyProxy statement bug in pyext/init.cpp

Tag: V00-03-08
2015-11-6 Igor Gaponenko, Christopher O'Grady
- move AnalyzePyProxy from src/ to pyext/ to remove boost_python
  dependency from libTimeTool.so (which was crashing the
  c++ module-load dlopen because it wasn't linking to libpython27).

Tag: V00-03-07
2015-10-8 David Schneider
- change name of Options.py to AnalyzeOptions.py, JIRA PSAS-189

Tag: V00-03-06
2015-10-8 David Schneider
- python interface allowing conditional execution, JIRA PSAS-189

Tag: V00-03-05
2015-7-12 David Schneider
	- allow default option for ref_load, JIRA PSAS-168

Tag: V00-03-04
2015-5-21 David Schneider
- improve plotting of TimeTool results
- improve examples
	
	
Tag: V00-03-03
2015-5-19 David Schneider
- Add option "TimeTool.Analyze.use_calib_db_ref=1" to read reference from 
  calibration database.	JIRA PSAS-149. Also, when eventdump=1, maintain
  a background reference frame that we pass on to EventDump for plotting.
- add example refCalibExample.py
  
	
Tag: V00-03-02
2015-5-14 David Schneider
- fix bug: eventdump feature was labeling ref_roi as _sig.
	
Tag: V00-03-01
2015-5-13 David Schneider
- fix bug in plot_analyze.py example
	
Tag: V00-03-00
2015-5-12 David Schneider
- deprecate old style methods of reporting results (floats and ndarrays)
  only add the TimeToolDataV2 object
- introduce EventDump class to collect data from TimeTool.Analyze and put
  in Event store